force-app/main/default/objects/Stock__c/fields/afficher_lancement_de_transfert__c.field-meta.xml
<CustomField>
    <fullName>afficher_lancement_de_transfert__c</fullName>
    <formula>NOT(ISBLANK( Date_d_approbation_rejet_consg_fact__c )) &amp;&amp;  (ISPICKVAL( Statut_preparation__c ,&quot;Préparé&quot;) || ISPICKVAL(Statut_preparation__c,&quot;A transférer&quot;)) &amp;&amp;  $User.role_name__c = &quot;PVN&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>afficher lancement de transfert</label>
    <type>Checkbox</type>
</CustomField>