force-app/main/default/objects/Stock__c/fields/afficher_receptionner__c.field-meta.xml
<CustomField>
    <fullName>afficher_receptionner__c</fullName>
    <formula>ISPICKVAL( Statut_preparation__c ,&quot;En cours de transfert&quot;) &amp;&amp;  NOT(ISBLANK( Date_d_approbation_rejet_consg_fact__c)) &amp;&amp; (TEXT( $User.Showroom__c) = TEXT( Site_de_destination__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>afficher receptionner</label>
    <type>Checkbox</type>
</CustomField>