force-app/main/default/objects/Stock__c/fields/BPS__c.field-meta.xml
<CustomField>
    <fullName>BPS__c</fullName>
    <label>BPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>