force-app/main/default/objects/Stock__c/fields/CDV__c.field-meta.xml
<CustomField>
    <fullName>CDV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stocks1</relationshipName>
    <type>Lookup</type>
</CustomField>