force-app/main/default/objects/Stock__c/fields/Client_CS__c.field-meta.xml
<CustomField>
    <fullName>Client_CS__c</fullName>
    <label>Client CS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>