force-app/main/default/objects/Stock__c/fields/Client_from_external_SI__c.field-meta.xml
<CustomField>
    <fullName>Client_from_external_SI__c</fullName>
    <label>Client from external SI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>