force-app/main/default/objects/Stock__c/fields/Commande_Speciale__c.field-meta.xml
<CustomField>
    <fullName>Commande_Speciale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commande Spéciale</label>
    <type>Checkbox</type>
</CustomField>