force-app/main/default/objects/Stock__c/fields/Conseiller_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Conseiller_Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conseiller Commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>