force-app/main/default/objects/Stock__c/fields/Couleur__c.field-meta.xml
<CustomField>
    <fullName>Couleur__c</fullName>
    <label>Couleur extérieure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>