force-app/main/default/objects/Stock__c/fields/Date_d_approbation_rejet_consg_fact__c.field-meta.xml
<CustomField>
    <fullName>Date_d_approbation_rejet_consg_fact__c</fullName>
    <label>Date d&apos;approbation / rejet</label>
    <type>DateTime</type>
</CustomField>