force-app/main/default/objects/Stock__c/fields/Date_d_arrivage_estim_e__c.field-meta.xml
<CustomField>
    <fullName>Date_d_arrivage_estim_e__c</fullName>
    <formula>ADDMONTHS(Date_de_production__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d&apos;arrivage estimée</label>
    <type>Date</type>
</CustomField>