force-app/main/default/objects/Stock__c/fields/Date_d_arrivage_estimee__c.field-meta.xml
<CustomField>
    <fullName>Date_d_arrivage_estimee__c</fullName>
    <label>Date d&apos;arrivage estimée</label>
    <type>Date</type>
</CustomField>