force-app/main/default/objects/Stock__c/fields/Date_d_entr_e_en_VO__c.field-meta.xml
<CustomField>
    <fullName>Date_d_entr_e_en_VO__c</fullName>
    <label>Date d&apos;entrée en VO</label>
    <type>Date</type>
</CustomField>