force-app/main/default/objects/Stock__c/fields/Date_d_entree_en_stock__c.field-meta.xml
<CustomField>
    <fullName>Date_d_entree_en_stock__c</fullName>
    <label>Date d’entrée en stock</label>
    <type>Date</type>
</CustomField>