force-app/main/default/objects/Stock__c/fields/Date_de_commande_speciale__c.field-meta.xml
<CustomField>
    <fullName>Date_de_commande_speciale__c</fullName>
    <label>Date de commande spéciale</label>
    <type>Date</type>
</CustomField>