force-app/main/default/objects/Stock__c/fields/Date_de_facturation_client__c.field-meta.xml
<CustomField>
    <fullName>Date_de_facturation_client__c</fullName>
    <label>Date de facturation client</label>
    <type>DateTime</type>
</CustomField>