force-app/main/default/objects/Stock__c/fields/Date_de_mise_en_circulation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_en_circulation__c</fullName>
    <description>Champ à remplir par la date de 1ère mise en circulation du VO</description>
    <label>Date de mise en circulation</label>
    <type>Date</type>
</CustomField>