force-app/main/default/objects/Stock__c/fields/Date_de_pr_paration__c.field-meta.xml
<CustomField>
    <fullName>Date_de_pr_paration__c</fullName>
    <label>Date de préparation</label>
    <type>DateTime</type>
</CustomField>