force-app/main/default/objects/Stock__c/fields/Date_de_production__c.field-meta.xml
<CustomField>
    <fullName>Date_de_production__c</fullName>
    <label>Date de production</label>
    <type>Date</type>
</CustomField>