force-app/main/default/objects/Stock__c/fields/Date_de_reservation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_reservation__c</fullName>
    <label>Date de réservation</label>
    <type>DateTime</type>
</CustomField>