force-app/main/default/objects/Stock__c/fields/Date_de_soumission_consig_fact__c.field-meta.xml
<CustomField>
    <fullName>Date_de_soumission_consig_fact__c</fullName>
    <label>Date de soumission</label>
    <type>DateTime</type>
</CustomField>