force-app/main/default/objects/Stock__c/fields/Demandeur__c.field-meta.xml
<CustomField>
    <fullName>Demandeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demandeur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>StockConsigneFacture</relationshipName>
    <type>Lookup</type>
</CustomField>