force-app/main/default/objects/Stock__c/fields/Destockage__c.field-meta.xml
<CustomField>
    <fullName>Destockage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Déstockage</label>
    <type>Checkbox</type>
</CustomField>