force-app/main/default/objects/Stock__c/fields/Directeur_commercial__c.field-meta.xml
<CustomField>
    <fullName>Directeur_commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Directeur Commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stocks3</relationshipName>
    <type>Lookup</type>
</CustomField>