force-app/main/default/objects/Stock__c/fields/Etat_Consignation_Facturation_Reseau__c.field-meta.xml
<CustomField>
    <fullName>Etat_Consignation_Facturation_Reseau__c</fullName>
    <label>Etat Consignation / Facturation Réseau</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande de consignation</fullName>
            </value>
            <value>
                <fullName>A consigner</fullName>
            </value>
            <value>
                <fullName>Consigné</fullName>
            </value>
            <value>
                <fullName>Consignation rejetée</fullName>
            </value>
            <value>
                <fullName>Demande de facturation</fullName>
            </value>
            <value>
                <fullName>A Facturer</fullName>
            </value>
            <value>
                <fullName>Facturé</fullName>
            </value>
            <value>
                <fullName>Facturation rejetée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>