force-app/main/default/objects/Stock__c/fields/Etat_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Etat_vehicule__c</fullName>
    <label>Etat véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disponible</fullName>
            </value>
            <value>
                <fullName>Réservé</fullName>
            </value>
            <value>
                <fullName>Facturé</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>