force-app/main/default/objects/Stock__c/fields/Finition_VO__c.field-meta.xml
<CustomField>
    <fullName>Finition_VO__c</fullName>
    <label>Finition VO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>