force-app/main/default/objects/Stock__c/fields/Frais_d_immatriculation__c.field-meta.xml
<CustomField>
    <fullName>Frais_d_immatriculation__c</fullName>
    <formula>Produit__r.Frais_d_immatriculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frais d&apos;immatriculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>