force-app/main/default/objects/Stock__c/fields/Garniture__c.field-meta.xml
<CustomField>
    <fullName>Garniture__c</fullName>
    <label>Couleur intérieure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>