force-app/main/default/objects/Stock__c/fields/Immobilis__c.field-meta.xml
<CustomField>
    <fullName>Immobilis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immobilisé</label>
    <type>Checkbox</type>
</CustomField>