force-app/main/default/objects/Stock__c/fields/Is_preparation_visible__c.field-meta.xml
<CustomField>
    <fullName>Is_preparation_visible__c</fullName>
    <formula>(TEXT( $User.Showroom__c ) != TEXT( Localisation__c )) &amp;&amp;  (ISPICKVAL( Etat_vehicule__c,&quot;Réservé&quot;) || ISPICKVAL( Etat_vehicule__c,&quot;Facturé&quot;)) &amp;&amp; NOT(ISPICKVAL( $User.Showroom__c,&quot;Ryad Auto Rabat - Groupe Smeia&quot;)) &amp;&amp; NOT(ISPICKVAL( Localisation__c,&quot;Ryad Auto Rabat - Groupe Smeia&quot;)) &amp;&amp; (ISPICKVAL(Statut_preparation__c,&quot;Transféré&quot;) || ISPICKVAL( Statut_preparation__c,&quot;Préparation rejetée&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is preparation visible</label>
    <type>Checkbox</type>
</CustomField>