force-app/main/default/objects/Stock__c/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Showrooms</valueSetName>
    </valueSet>
</CustomField>