force-app/main/default/objects/Stock__c/fields/Marque_VO__c.field-meta.xml
<CustomField>
    <fullName>Marque_VO__c</fullName>
    <label>Marque VO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marques</valueSetName>
    </valueSet>
</CustomField>