force-app/main/default/objects/Stock__c/fields/Modele_VO__c.field-meta.xml
<CustomField>
    <fullName>Modele_VO__c</fullName>
    <label>Modèle VO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>