force-app/main/default/objects/Stock__c/fields/motif__c.field-meta.xml
<CustomField>
    <fullName>motif__c</fullName>
    <label>motif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>