force-app/main/default/objects/Stock__c/fields/N_de_chassis__c.field-meta.xml
<CustomField>
    <fullName>N_de_chassis__c</fullName>
    <label>N° de chassis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>