force-app/main/default/objects/Stock__c/fields/N_de_commande__c.field-meta.xml
<CustomField>
    <fullName>N_de_commande__c</fullName>
    <externalId>true</externalId>
    <label>N° de commande</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>