force-app/main/default/objects/Stock__c/fields/N_de_plaque__c.field-meta.xml
<CustomField>
    <fullName>N_de_plaque__c</fullName>
    <label>N° de plaque</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>