force-app/main/default/objects/Stock__c/fields/Nom_commercial__c.field-meta.xml
<CustomField>
    <fullName>Nom_commercial__c</fullName>
    <formula>Conseiller_Commercial__r.FirstName &amp; &quot; &quot; &amp; Conseiller_Commercial__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom commercial</label>
    <type>Text</type>
</CustomField>