force-app/main/default/objects/Stock__c/fields/Options_suppl_mentaires__c.field-meta.xml
<CustomField>
    <fullName>Options_suppl_mentaires__c</fullName>
    <label>Options supplémentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>