force-app/main/default/objects/Stock__c/fields/Priv__c.field-meta.xml
<CustomField>
    <fullName>Priv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privé</label>
    <type>Checkbox</type>
</CustomField>