force-app/main/default/objects/Stock__c/fields/Prix_destockage_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_destockage_TTC__c</fullName>
    <label>Prix déstockage TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>