force-app/main/default/objects/Stock__c/fields/Prix_Options_suppl_mentaires__c.field-meta.xml
<CustomField>
    <fullName>Prix_Options_suppl_mentaires__c</fullName>
    <label>Prix Options supplémentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>