force-app/main/default/objects/Stock__c/fields/prix_plancher_VO_SEMIA_TTC__c.field-meta.xml
<CustomField>
    <fullName>prix_plancher_VO_SEMIA_TTC__c</fullName>
    <label>prix plancher VO SEMIA TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>