force-app/main/default/objects/Stock__c/fields/Prix_plancher_VO_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_plancher_VO_TTC__c</fullName>
    <label>Prix plancher VO TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>