force-app/main/default/objects/Stock__c/fields/Prix_Promo_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_Promo_TTC__c</fullName>
    <label>Prix Spécial TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>