force-app/main/default/objects/Stock__c/fields/Prix_public_CEM_Total__c.field-meta.xml
<CustomField>
    <fullName>Prix_public_CEM_Total__c</fullName>
    <formula>Prix_public_TTC__c +  Frais_d_immatriculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix public CEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>