force-app/main/default/objects/Stock__c/fields/Prix_public_produit_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_public_produit_TTC__c</fullName>
    <formula>IF(  ISPICKVAL(Etat_vehicule__c,&quot;Disponible&quot;),Produit__r.Prix_public__c, Tech_Prix_public_produit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix public produit TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>