force-app/main/default/objects/Stock__c/fields/Prix_public_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_public_TTC__c</fullName>
    <formula>IF(ISPICKVAL( Type_du_v_hicule__c ,&quot;VN&quot;), Prix_public_produit_TTC__c + Prix_Total_Options_TTC__c , Prix_public_VO_TTC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix public TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>