force-app/main/default/objects/Stock__c/fields/Prix_Total_Options_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_Total_Options_TTC__c</fullName>
    <label>Prix Total Options TTC</label>
    <summarizedField>Option_stock__c.Prix_d_option__c</summarizedField>
    <summaryFilterItems>
        <field>Option_stock__c.Statut__c</field>
        <operation>equals</operation>
        <value>Confirmé, Supprimé</value>
    </summaryFilterItems>
    <summaryForeignKey>Option_stock__c.Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>