force-app/main/default/objects/Stock__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offre spéciale</label>
    <type>Checkbox</type>
</CustomField>