force-app/main/default/objects/Stock__c/fields/Puissance_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Puissance_Fiscal__c</fullName>
    <label>Puissance Fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>