force-app/main/default/objects/Stock__c/fields/Raison_d_immobilisation__c.field-meta.xml
<CustomField>
    <fullName>Raison_d_immobilisation__c</fullName>
    <label>Raison d&apos;immobilisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prélèvement en cours</fullName>
            </value>
            <value>
                <fullName>Véhicule non homologué</fullName>
            </value>
            <value>
                <fullName>Véhicule sinistré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>