force-app/main/default/objects/Stock__c/fields/Semaine_de_production_confirmee__c.field-meta.xml
<CustomField>
    <fullName>Semaine_de_production_confirmee__c</fullName>
    <label>Semaine de production confirmée</label>
    <type>Date</type>
</CustomField>