force-app/main/default/objects/Stock__c/fields/Semaine_de_production_pr_visionnelle__c.field-meta.xml
<CustomField>
    <fullName>Semaine_de_production_pr_visionnelle__c</fullName>
    <label>Semaine de production prévisionnelle</label>
    <type>Date</type>
</CustomField>