force-app/main/default/objects/Stock__c/fields/Site_de_destination__c.field-meta.xml
<CustomField>
    <fullName>Site_de_destination__c</fullName>
    <label>Site de destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Showrooms</valueSetName>
    </valueSet>
</CustomField>