force-app/main/default/objects/Stock__c/fields/status_d_approbation_VO__c.field-meta.xml
<CustomField>
    <fullName>status_d_approbation_VO__c</fullName>
    <label>status d&apos;approbation VO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours d&apos;approbation</fullName>
            </value>
            <value>
                <fullName>Approuvé</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>