force-app/main/default/objects/Stock__c/fields/Statut_commande__c.field-meta.xml
<CustomField>
    <fullName>Statut_commande__c</fullName>
    <label>Statut commande</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En arrivage</fullName>
            </value>
            <value>
                <fullName>En stock</fullName>
            </value>
            <value>
                <fullName>Supprimée</fullName>
            </value>
            <value>
                <fullName>En attente de confirmation</fullName>
            </value>
            <value>
                <fullName>Bloquée</fullName>
            </value>
            <value>
                <fullName>En production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>