force-app/main/default/objects/Stock__c/fields/Statut_preparation__c.field-meta.xml
<CustomField>
    <fullName>Statut_preparation__c</fullName>
    <label>Statut préparation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demande de préparation</fullName>
            </value>
            <value>
                <fullName>En cours de préparation</fullName>
            </value>
            <value>
                <fullName>Préparé</fullName>
            </value>
            <value>
                <fullName>Préparation rejetée</fullName>
            </value>
            <value>
                <fullName>En cours de transfert</fullName>
            </value>
            <value>
                <fullName>A transférer</fullName>
            </value>
            <value>
                <fullName>Transféré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>