force-app/main/default/objects/Stock__c/fields/Tech_Check_VR_for_plaque__c.field-meta.xml
<CustomField>
    <fullName>Tech_Check_VR_for_plaque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Check VR for plaque</label>
    <type>Checkbox</type>
</CustomField>