force-app/main/default/objects/Stock__c/fields/Tech_Date_filtre_dordre__c.field-meta.xml
<CustomField>
    <fullName>Tech_Date_filtre_dordre__c</fullName>
    <formula>If (Text(Statut_commande__c) == &quot;En stock&quot;,Date_d_entree_en_stock__c, IF (TEXT(Statut_commande__c) ==  &quot;En arrivage&quot;,Date_d_arrivage_estimee__c ,IF (TEXT(Statut_commande__c) == &quot;En production&quot;, Date_de_production__c, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Date filtre d&apos;ordre</label>
    <type>Date</type>
</CustomField>