force-app/main/default/objects/Stock__c/fields/Tech_delete_stock__c.field-meta.xml
<CustomField>
    <fullName>Tech_delete_stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_delete_stock</label>
    <type>Checkbox</type>
</CustomField>