force-app/main/default/objects/Stock__c/fields/Tech_finition__c.field-meta.xml
<CustomField>
    <fullName>Tech_finition__c</fullName>
    <formula>TEXT( Produit__r.Finition__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>finition</label>
    <type>Text</type>
</CustomField>