force-app/main/default/objects/Stock__c/fields/Tech_Frais_d_immatriculation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Frais_d_immatriculation__c</fullName>
    <label>Tech Frais d&apos;immatriculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>