force-app/main/default/objects/Stock__c/fields/Tech_marque__c.field-meta.xml
<CustomField>
    <fullName>Tech_marque__c</fullName>
    <formula>TEXT(Produit__r.Marque__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>marque</label>
    <type>Text</type>
</CustomField>