force-app/main/default/objects/Stock__c/fields/Tech_model__c.field-meta.xml
<CustomField>
    <fullName>Tech_model__c</fullName>
    <formula>TEXT(Produit__r.Modele__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>model</label>
    <type>Text</type>
</CustomField>