force-app/main/default/objects/Stock__c/fields/Tech_options_supp_available__c.field-meta.xml
<CustomField>
    <fullName>Tech_options_supp_available__c</fullName>
    <label>Tech options supp available</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>