force-app/main/default/objects/Stock__c/fields/Tech_Prix_public_produit__c.field-meta.xml
<CustomField>
    <fullName>Tech_Prix_public_produit__c</fullName>
    <label>Tech Prix public produit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>