force-app/main/default/objects/Stock__c/fields/Tech_serie__c.field-meta.xml
<CustomField>
    <fullName>Tech_serie__c</fullName>
    <formula>Text( Produit__r.Serie__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>série</label>
    <type>Text</type>
</CustomField>