force-app/main/default/objects/Stock__c/fields/Tech_VR_pour_les_option_supp_et_prix__c.field-meta.xml
<CustomField>
    <fullName>Tech_VR_pour_les_option_supp_et_prix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech VR pour les option supp et prix</label>
    <type>Checkbox</type>
</CustomField>