force-app/main/default/objects/Stock__c/fields/Toutes_les_options__c.field-meta.xml
<CustomField>
    <fullName>Toutes_les_options__c</fullName>
    <label>Toutes les options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>