force-app/main/default/objects/Stock__c/fields/Type_du_v_hicule__c.field-meta.xml
<CustomField>
    <fullName>Type_du_v_hicule__c</fullName>
    <label>Type du véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>VO</fullName>
                <default>true</default>
                <label>VO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>