force-app/main/default/objects/Stock__c/fields/Vehicule_de_fonction__c.field-meta.xml
<CustomField>
    <fullName>Vehicule_de_fonction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Véhicule de fonction</label>
    <type>Checkbox</type>
</CustomField>