force-app/main/default/objects/Stock__c/fields/Vehicule_de_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Vehicule_de_Test_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Véhicule de Test Drive</label>
    <type>Checkbox</type>
</CustomField>