force-app/main/default/objects/Stock__c/fields/WW__c.field-meta.xml
<CustomField>
    <fullName>WW__c</fullName>
    <label>N° WW</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>