force-app/main/default/objects/Stock__c/validationRules/Stock_VR_001_Validation_Produit_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_VR_001_Validation_Produit_Lookup</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Produit__c) &amp;&amp;  ISPICKVAL( Type_du_v_hicule__c ,&quot;VN&quot;)</errorConditionFormula>
    <errorDisplayField>Produit__c</errorDisplayField>
    <errorMessage>Merci de renseigner le produit parent du véhicule.</errorMessage>
</ValidationRule>