force-app/main/default/objects/Stock__c/validationRules/Stock_VR_002_blockage_de_suppression.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_VR_002_blockage_de_suppression</fullName>
    <active>true</active>
    <errorConditionFormula>Tech_delete_stock__c</errorConditionFormula>
    <errorMessage>Impossible de supprimer un stock no disponible</errorMessage>
</ValidationRule>