force-app/main/default/objects/Stock__c/validationRules/Stock_VR_003_Special_destockage.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_VR_003_Special_destockage</fullName>
    <active>true</active>
    <errorConditionFormula>Promo__c  &amp;&amp;  Destockage__c</errorConditionFormula>
    <errorDisplayField>Promo__c</errorDisplayField>
    <errorMessage>Destockage et offre spéciale ne peuvent pas être cumulés. Merci de choisir une seule valeur.</errorMessage>
</ValidationRule>