force-app/main/default/objects/Stock__c/validationRules/Stock_VR_004_Validation_taille_optionSup.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_VR_004_Validation_taille_optionSup</fullName>
    <active>true</active>
    <errorConditionFormula>Tech_VR_pour_les_option_supp_et_prix__c</errorConditionFormula>
    <errorMessage>Merci de verifier la taille des options supplémentaire et des prix</errorMessage>
</ValidationRule>