force-app/main/default/objects/Stock__c/validationRules/Stock_VR_005_Validation_N_Plaque.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_VR_005_Validation_N_Plaque</fullName>
    <active>true</active>
    <errorConditionFormula>Tech_Check_VR_for_plaque__c</errorConditionFormula>
    <errorMessage>Merci de bien respecter la forme de Nº plaque.
Example : 1234-H-20</errorMessage>
</ValidationRule>