force-app/main/default/objects/Stock__c/listViews/ADV_National_Stock.listView-meta.xml
<ListView>
    <fullName>ADV_National_Stock</fullName>
    <filterScope>Queue</filterScope>
    <label>ADV National</label>
    <queue>ADV_National</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>