force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_du_v_hicule__c</columns>
    <columns>N_de_commande__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date_de_production__c</columns>
    <columns>Date_d_entree_en_stock__c</columns>
    <columns>Etat_vehicule__c</columns>
    <columns>N_de_chassis__c</columns>
    <columns>Produit__c</columns>
    <columns>Conseiller_Commercial__c</columns>
    <columns>Options_suppl_mentaires__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>