force-app/main/default/objects/Stock__c/listViews/Finance_Stock.listView-meta.xml
<ListView>
    <fullName>Finance_Stock</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance</label>
    <queue>Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>