force-app/main/default/objects/Stock__c/listViews/Ordering_Stock.listView-meta.xml
<ListView>
    <fullName>Ordering_Stock</fullName>
    <filterScope>Queue</filterScope>
    <label>Ordering</label>
    <queue>Ordering</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>