force-app/main/default/objects/Stock__c/listViews/PVN_Stock.listView-meta.xml
<ListView>
    <fullName>PVN_Stock</fullName>
    <filterScope>Queue</filterScope>
    <label>PVN</label>
    <queue>PVN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>