force-app/main/default/objects/Stock__c/listViews/Stock_disponible_BMW.listView-meta.xml
<ListView>
    <fullName>Stock_disponible_BMW</fullName>
    <columns>NAME</columns>
    <columns>Couleur__c</columns>
    <columns>Etat_vehicule__c</columns>
    <columns>Garniture__c</columns>
    <columns>Frais_d_immatriculation__c</columns>
    <columns>Produit__c</columns>
    <columns>Prix_public_produit_TTC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Produit__c</field>
        <operation>contains</operation>
        <value>MINI</value>
    </filters>
    <label>Stock disponible MINI</label>
</ListView>