force-app/main/default/objects/Stock__c/listViews/Vehicule_VO.listView-meta.xml
<ListView>
    <fullName>Vehicule_VO</fullName>
    <columns>NAME</columns>
    <columns>BPS__c</columns>
    <columns>Marque_VO__c</columns>
    <columns>Localisation__c</columns>
    <columns>Etat_vehicule__c</columns>
    <columns>status_d_approbation_VO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_du_v_hicule__c</field>
        <operation>equals</operation>
        <value>VO</value>
    </filters>
    <label>Véhicule VO</label>
</ListView>